test-cases/final-dump/bug228-undefined.exp
Error detected during type checking of module(s) bug228-undefined
final-dump/bug228-undefined.wybe:10:10: proc res unknown in module top-level code
